--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ a {
 
   max-width: 1600px;
   height: 600px;
+  padding-top: 200px;
   margin-left: auto;
   margin-right: auto;
   background-position: center;
@@ -249,6 +250,11 @@ a {
 }
 .advantages-item:not(:last-child) {
   margin-right: 30px;
+}
+
+.advantages-item {
+  justify-content: space-between;
+  width: 270px;
 }
 
 .advantages-title {
@@ -326,18 +332,20 @@ a {
 }
 
 .team-item:not(:last-child) {
-  background-color: var(--primary-white-color);
   margin-right: 30px;
 }
 
 .team-item {
+  background-color: var(--primary-white-color);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 0px 0px 4px 4px;
+  width: 270px;
 }
 
 .social-links {
   display: flex;
+  width: 270px;
 }
 
 .social-links-item:not(:last-child) {
@@ -490,6 +498,7 @@ footer {
 .buttons-portfolio {
   border-radius: 4px;
   padding: 6px 22px;
+  border: none;
 
   color: var(--title-text-color);
   background-color: var(--secondary-background-color);
@@ -499,10 +508,12 @@ footer {
   line-height: 1.62;
   text-align: center;
 }
-.buttons-item:hover,
-.buttons-item:focus {
+.buttons-portfolio:hover,
+.buttons-portfolio:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 
 /* виды работ */
@@ -521,6 +532,13 @@ footer {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+
+.projects-item:hover,
+.projects-item:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
 .projects-item:nth-child(3n) {
@@ -554,4 +572,5 @@ footer {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
+  display: none;
 }
