в постоянных клиентах сделано svg class="clients-logo" через спрайт

--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,29 @@ a {
 }
 /* постоянные клиенты */
 
+.clients-link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 170px;
+  height: 90px;
+  color: #afb1b8;
+}
+
+.clients-link .clients-logo {
+  fill: currentColor;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  color: var(--accent-color);
+  background-color: var(--primary-white-color);
+  border: 1px solid var(--accent-color);
+}
+
 .clients-list {
   display: flex;
   justify-content: center;
@@ -396,10 +419,6 @@ a {
   margin-right: 30px;
 }
 
-.clients-link:hover,
-.clients-link:focus {
-  background-color: var(--accent-color);
-}
 /* футер */
 
 .footer-list {
