--- a/css/styles.css
+++ b/css/styles.css
@@ -186,13 +186,17 @@ a {
 }
 
 .hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   text-align: center;
-
-  background-color: rgba(47, 48, 58, 0.8);
-
   max-width: 1600px;
   height: 600px;
-  padding-top: 200px;
+  /* padding-top: 200px;
+  padding-bottom: 600px; */
+
   margin-left: auto;
   margin-right: auto;
   background-position: center;
@@ -203,6 +207,12 @@ a {
       rgba(47, 48, 58, 0.8)
     ),
     url('../images/headeroptamiz.jpg');
+}
+.hero-content {
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  background-size: cover;
 }
 
 .button {
@@ -227,6 +237,7 @@ a {
 
 .advantages-list {
   display: flex;
+  flex-wrap: wrap;
 }
 /* .advantages-item::before {
   content: '';
@@ -270,6 +281,15 @@ a {
   margin-right: 30px;
 }
 
+.our-advantages {
+  display: none;
+}
+
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .advantages-item {
   justify-content: space-between;
   width: 270px;
@@ -303,10 +323,12 @@ a {
   text-align: center;
 }
 
-.directions-item > p {
+.directions-item > h3 {
   color: var(--primary-white-color);
   background-color: rgba(47, 48, 58, 0.8);
 
+  padding-top: 27px;
+  padding-bottom: 27px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -319,6 +341,7 @@ a {
 }
 .directions-list {
   display: flex;
+  flex-wrap: wrap;
 }
 .directions-item:not(:last-child) {
   margin-right: 30px;
@@ -332,6 +355,7 @@ a {
 
 .team-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .team-image {
@@ -431,6 +455,7 @@ a {
 
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .clients-item:not(:last-child) {
@@ -441,10 +466,12 @@ a {
 
 .footer-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .container-footer {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-item:not(:last-child) {
@@ -486,13 +513,20 @@ footer {
   display: inline-block;
   margin-bottom: 9px;
   color: var(--primary-white-color);
+  font-style: normal;
 }
 .footer-contacts {
   display: inline-block;
   margin-bottom: 9px;
-
   color: rgba(255, 255, 255, 0.6);
+  font-style: normal;
 }
+
+.footer-contacts:hover,
+.footer-contacts:focus {
+  color: var(--accent-color);
+}
+
 .join-us {
   display: inline-block;
   margin-bottom: 20px;
@@ -633,6 +667,10 @@ footer {
   margin-bottom: 0;
 }
 
+.projects-works {
+  margin: 20px 24px;
+}
+
 .projects-title {
   margin-bottom: 4px;
 
@@ -648,6 +686,7 @@ footer {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
+  color: var(--primary-text-color);
 }
 
 .projects-text {
