--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,10 @@ a {
   list-style: none;
 }
 
+.hidden {
+  display: none;
+}
+
 /* шапка */
 
 .logo {
@@ -187,9 +191,9 @@ a {
 
 .hero {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 
   text-align: center;
   max-width: 1600px;
@@ -207,12 +211,12 @@ a {
       rgba(47, 48, 58, 0.8)
     ),
     url('../images/headeroptamiz.jpg');
+  background-size: cover;
 }
 .hero-content {
   max-width: 696px;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
+  margin: auto;
+  /* margin-right: auto; */
 }
 
 .button {
@@ -267,7 +271,7 @@ a {
 } */
 .advantages-icon {
   display: inline-flex;
-  width: 270px;
+  width: 100%;
   height: 120px;
   box-sizing: border-box;
   border-radius: 4px;
@@ -279,10 +283,6 @@ a {
 
 .advantages-item:not(:last-child) {
   margin-right: 30px;
-}
-
-.our-advantages {
-  display: none;
 }
 
 .advantages-list {
@@ -608,6 +608,7 @@ footer {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+  border-radius: 4px;
 }
 
 .buttons-item:not(:last-child) {
@@ -668,7 +669,7 @@ footer {
 }
 
 .projects-works {
-  margin: 20px 24px;
+  padding: 20px 24px;
 }
 
 .projects-title {
